logs/kervi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/autobahn'...
Listing './lib/python3.5/site-packages/autobahn/asyncio'...
Listing './lib/python3.5/site-packages/autobahn/asyncio/test'...
Listing './lib/python3.5/site-packages/autobahn/rawsocket'...
Listing './lib/python3.5/site-packages/autobahn/rawsocket/test'...
Listing './lib/python3.5/site-packages/autobahn/test'...
Listing './lib/python3.5/site-packages/autobahn/twisted'...
Listing './lib/python3.5/site-packages/autobahn/wamp'...
Listing './lib/python3.5/site-packages/autobahn/wamp/test'...
Listing './lib/python3.5/site-packages/autobahn/websocket'...
Listing './lib/python3.5/site-packages/autobahn/websocket/test'...
Listing './lib/python3.5/site-packages/autobahn-17.10.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/kervi'...
Listing './lib/python3.5/site-packages/kervi/application'...
Listing './lib/python3.5/site-packages/kervi/controllers'...
Listing './lib/python3.5/site-packages/kervi/dashboards'...
Listing './lib/python3.5/site-packages/kervi/devices'...
Listing './lib/python3.5/site-packages/kervi/devices/displays'...
Listing './lib/python3.5/site-packages/kervi/devices/gpio'...
Listing './lib/python3.5/site-packages/kervi/devices/motors'...
Listing './lib/python3.5/site-packages/kervi/devices/platforms'...
Listing './lib/python3.5/site-packages/kervi/devices/platforms/common'...
Listing './lib/python3.5/site-packages/kervi/devices/platforms/common/sensors'...
Listing './lib/python3.5/site-packages/kervi/devices/pwm'...
Listing './lib/python3.5/site-packages/kervi/devices/sensors'...
Listing './lib/python3.5/site-packages/kervi/hal'...
Listing './lib/python3.5/site-packages/kervi/module'...
Compiling './lib/python3.5/site-packages/kervi/module/__init__.py'...
***   File "./lib/python3.5/site-packages/kervi/module/__init__.py", line 145
    self._process_info += [{"id":module, "ready":False}]
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kervi/platforms'...
Listing './lib/python3.5/site-packages/kervi/platforms/generic'...
Listing './lib/python3.5/site-packages/kervi/sensors'...
Listing './lib/python3.5/site-packages/kervi/spine'...
Listing './lib/python3.5/site-packages/kervi/ui'...
Listing './lib/python3.5/site-packages/kervi/ui/web'...
Listing './lib/python3.5/site-packages/kervi/ui/web/dist'...
Listing './lib/python3.5/site-packages/kervi/utility'...
Compiling './lib/python3.5/site-packages/kervi/utility/bus-delete.py'...
*** Sorry: IndentationError: unexpected indent (bus-delete.py, line 171)
Compiling './lib/python3.5/site-packages/kervi/utility/cron.py'...
***   File "./lib/python3.5/site-packages/kervi/utility/cron.py", line 4
    class CronJob(object)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kervi/values'...
Listing './lib/python3.5/site-packages/kervi/version'...
Listing './lib/python3.5/site-packages/kervi/vision'...
Listing './lib/python3.5/site-packages/kervi/vision/fonts'...
Listing './lib/python3.5/site-packages/kervi-0.13.34.egg-info'...
Listing './lib/python3.5/site-packages/kervi_cli'...
Listing './lib/python3.5/site-packages/kervi_cli/scripts'...
Listing './lib/python3.5/site-packages/kervi_cli/scripts/commands'...
Listing './lib/python3.5/site-packages/kervi_cli/templates'...
Listing './lib/python3.5/site-packages/kervi_cli-0.13.34.egg-info'...
Listing './lib/python3.5/site-packages/kervi_device_library-0.13.34.egg-info'...
Listing './lib/python3.5/site-packages/kervi_hal_generic-0.13.34.egg-info'...
Listing './lib/python3.5/site-packages/kervi_ui-0.13.34.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './lib/python3.5/site-packages/txaio'...
Listing './lib/python3.5/site-packages/txaio-2.8.2.dist-info'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './share'...
Listing './share/python-wheels'...
